--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   name             : "Cannon Cloud"
   pronouns         :  example: "He/him"  
   bio              : "PhD Candidate in Economics at Goethe University Frankfurt, studying development, mobility and the environment"
