--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Cannon Cloud"
-  pronouns         :  example: "He/him"  
+  pronouns         :  "He/him"  
   bio              : "PhD Candidate in Economics at Goethe University Frankfurt, studying development, mobility and the environment"
   location         : "Frankfurt, Germany"
   employer         : "Goethe University Frankfurt"
