--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Cannon Cloud"
   pronouns         :  "He/him"  
-  bio              : "PhD Candidate in Economics at Goethe University Frankfurt, studying development, mobility and the environment"
+  bio              : "PhD Candidate in Economics at Goethe University Frankfurt, studying development, mobility and the environment."
   location         : "Frankfurt, Germany"
   employer         : "Goethe University Frankfurt"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "cloud@econ.uni-frankfurt.de" 
 
   # Academic websites
   #arxiv            : # URL - Update with the correct link to your profile
@@ -43,12 +43,12 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "CannonCloud"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : "@cannoncloud.bsky.social" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
