--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   #arxiv            : # URL - Update with the correct link to your profile
-  #googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    :  "https://scholar.google.com/citations?user=EuRYEmoAAAAJ&hl"
   #impactstory      : # URL
   orcid            : "https://orcid.org/0000-0001-7657-0673"
   #semantic         : # URL
@@ -48,7 +48,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "@cannoncloud.bsky.social" # Replace this with you Bluesky username
+  bluesky          : "cannoncloud.bsky.social" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
